# Reasoning_Agents_2020

./: .gitignore  README.md
NL2LTLf/: NL2LTL.py  mappings.csv  mappings_alt.csv
NL2LTLf/Cfg/: CFG2LTLf.py  cfg_ltlf.txt  cfg_nl.txt
NL2LTLf/LambdaCalculus/: NL2LTL.py  NL2LTLf.py  mappings.csv  mappings_alt.csv
NL2LTLf/NLPPipeline/src/app/: FrameItem.java  LTLNode.java  NL2LTLTranslator.java  WordNetUtils.java  babyai_actions.java  matcher.java
NL2LTLf/NLPPipeline/src/app/models/: file_properties.xml
NL2LTLf/NLPPipeline/src/lib/: IMPORTANT -model download.txt
NL2LTLf_NLP_Pipeline/src/app/: LTL_template.java  NL2LTLUtils.java  StanfordLemmatizer.java
babyai/: pyproject.toml
babyai/babyai/rl/: rb.py
babyai/babyai/rl/utils/: penv.py
babyai/scripts/: enjoy.py  manual_control.py  train_rl.py
babyai_rb/: copy.sh  pyproject.toml
babyai_rb/babyai/: evaluate.py  model.py
babyai_rb/babyai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
babyai_rb/babyai/rl/: rb.py
babyai_rb/babyai/rl/algos/: base.py  ppo.py
babyai_rb/babyai/rl/utils/: penv.py
babyai_rb/babyai/utils/: __init__.py  agent.py  format.py  model.py  rb.py
babyai_rb/scripts/: enjoy.py  manual_control.py  train_rl.py
babyai_rb/scripts/logs/BabyAI-GoToRedBallGrey-v0_ppo_ObjectsVisitRestrainingBolt_1.0_expert_filmcnn_gru_mem_seed1_20-05-19-11-34-46/: log.csv
babyai_rb/scripts/logs/BabyAI-GoToRedBallGrey-v0_ppo_ObjectsVisitRestrainingBolt_3.0_expert_filmcnn_gru_mem_seed1_20-05-19-13-03-27/: events.out.tfevents.1589886207.emilian-X542UAR  log.csv
(+8 files in other folders)
